chore: refine instructions for verifying ARM64 Python installation in npu notebook

--- a/bindings/python/notebook/npu.ipynb
+++ b/bindings/python/notebook/npu.ipynb
@@ -33,13 +33,13 @@
         "python -c \"import sys, platform; print(f'Python version: {sys.version}')\"\n",
         "```\n",
         "\n",
-        "Your output should look something like:\n",
+        "Your output should look like:\n",
         "\n",
-        "> Python version: 3.XX.XX (...) [MSC v.1938 64 bit (**ARM64**)]\n",
+        "> Python version: 3.11.0 (main, Oct 24 2022, 18:15:22) [MSC v.1933 64 bit (ARM64)]\n",
         "\n",
-        "Expected output should contain `arm64` or other architectures (**NOT** `AMD64`).\n",
+        "Expected output must contain version `3.11.0` and architecture `ARM64`.\n",
         "\n",
-        "If it does show `AMD64` or some other architectures, try the following:\n",
+        "If it does show `AMD64` or incorrect version, try the following:\n",
         "- (If you have conda installed) Run `conda deactivate` to deactivate the current conda environment.\n",
         "- (If your `python` executable points to the x86 version) You may need to make the ARM64 Python come before the x86 Python in your PATH.\n",
         "    - Hit the `Win` key, and type `env`, and hit Enter to select `Edit the system environment variables` setting.\n",
