chore: enhance formatting and clarity in npu notebook instructions

--- a/bindings/python/notebook/npu.ipynb
+++ b/bindings/python/notebook/npu.ipynb
@@ -18,14 +18,13 @@
         "## Prerequisites\n",
         "\n",
         "### 1. Install the correct Python version\n",
+        "\n",
         "NexaAI requires **Python 3.11 – 3.13 (ARM64 build)** on Windows ARM.\n",
         "Please **download and install the official ARM64 Python** from the [python-3.11.1-arm64.exe](https://www.python.org/ftp/python/3.11.1/python-3.11.1-arm64.exe). Make sure you read the instructions below carefully before proceeding.\n",
         "\n",
         "> ❗ **IMPORTANT**: Make sure you select \"Add python.exe to PATH\" on the first screen of the installation wizard.\n",
         "\n",
         "> ⚠️ Do **not** use Conda or x86 builds — they are incompatible with native ARM64 binaries. If you are in a conda environment, run `conda deactivate` first.\n",
-        "\n",
-        "\n",
         "\n",
         "Verify the installation:\n",
         "\n",
@@ -40,16 +39,16 @@
         "Expected output must contain version `3.11.0` and architecture `ARM64`.\n",
         "\n",
         "If it does show `AMD64` or incorrect version, try the following:\n",
+        "\n",
         "- (If you have conda installed) Run `conda deactivate` to deactivate the current conda environment.\n",
         "- (If your `python` executable points to the x86 version) You may need to make the ARM64 Python come before the x86 Python in your PATH.\n",
-        "    - Hit the `Win` key, and type `env`, and hit Enter to select `Edit the system environment variables` setting.\n",
-        "    - Click on `Environment Variables...` button.\n",
-        "    - Select `Path` and click `Edit...`.\n",
-        "    - Find your ARM64 Python installation path, and move it to the top of the list.\n",
-        "    - Hit `OK` for several times to close all the dialogs and save the changes.\n",
+        "  - Hit the `Win` key, and type `env`, and hit Enter to select `Edit the system environment variables` setting.\n",
+        "  - Click on `Environment Variables...` button.\n",
+        "  - Select `Path` and click `Edit...`.\n",
+        "  - Find your ARM64 Python installation path, and move it to the top of the list.\n",
+        "  - Hit `OK` for several times to close all the dialogs and save the changes.\n",
         "- (If you forgot to select \"Add python.exe to PATH\" on the first screen of the installation wizard)\n",
-        "    - Run the installation wizard again, follow the instructions to remove the current installation, and then reinstall from the Wizard. Make sure to select \"Add python.exe to PATH\" this time.\n",
-        "\n",
+        "  - Run the installation wizard again, follow the instructions to remove the current installation, and then reinstall from the Wizard. Make sure to select \"Add python.exe to PATH\" this time.\n",
         "\n",
         "---\n",
         "\n",
@@ -73,6 +72,7 @@
         "---\n",
         "\n",
         "### 4. Select the venv as your Jupyter Notebook kernel\n",
+        "\n",
         "- Depending the editor you are using, the way to change kernel might be different. For Cursor / VS Code, they are located at the top right corner of you code window.\n",
         "- Look for and select the `nexaai-env`, or the custom virtual environment you have created. The kernel should automatically reload in most IDEs.\n"
       ]
@@ -83,7 +83,7 @@
       "source": [
         "### Verification of Kernel\n",
         "\n",
-        "Run the following code to ensure you have the right kernel running."
+        "Run the following code to ensure you have the right kernel running.\n"
       ]
     },
     {
@@ -108,11 +108,11 @@
         "arch = platform.machine()\n",
         "\n",
         "if not (min_ver <= (current_ver.major, current_ver.minor) < max_ver) or arch.lower() != \"arm64\":\n",
-        "    print(\"\\n\" + \"=\"*80)\n",
+        "    print(\"\\n\" + \"=\" * 80)\n",
         "    print(f\"{BOLD}{RED}WARNING: Your Python version or architecture is not compatible.{RESET}\")\n",
         "    print(f\"Detected version: {current_ver.major}.{current_ver.minor}, architecture: {arch}\")\n",
         "    print(f\"{YELLOW}Required: Python 3.11 - 3.13 & architecture 'arm64'.{RESET}\")\n",
-        "    print(\"=\"*80)\n",
+        "    print(\"=\" * 80)\n",
         "    print(f\"{RED}DO NOT continue to the following code!{RESET}\\n\")\n",
         "    print(\"To install arm64 Python:\")\n",
         "    print(\"  - Download Python 3.11-3.13 for arm64 from https://www.python.org/downloads/\")\n",
@@ -127,14 +127,13 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "\n",
         "## Authentication Setup\n",
         "\n",
         "Before running any examples, you need to set up your NexaAI authentication token.\n",
         "\n",
         "### Set Token in Code\n",
         "\n",
-        "Replace `\"YOUR_NEXA_TOKEN_HERE\"` with your actual NexaAI token from [https://sdk.nexa.ai/](https://sdk.nexa.ai/):"
+        "Replace `\"YOUR_NEXA_TOKEN_HERE\"` with your actual NexaAI token from [https://sdk.nexa.ai/](https://sdk.nexa.ai/):\n"
       ]
     },
     {
@@ -148,7 +147,8 @@
         "# Replace \"YOUR_NEXA_TOKEN_HERE\" with your actual token from https://sdk.nexa.ai/\n",
         "os.environ[\"NEXA_TOKEN\"] = \"YOUR_NEXA_TOKEN_HERE\"\n",
         "\n",
-        "assert os.environ.get(\"NEXA_TOKEN\", \"\").startswith(\"key/\"), \"ERROR: NEXA_TOKEN must start with 'key/'. Please check your token.\"\n"
+        "assert os.environ.get(\"NEXA_TOKEN\", \"\").startswith(\n",
+        "    \"key/\"), \"ERROR: NEXA_TOKEN must start with 'key/'. Please check your token.\"\n"
       ]
     },
     {
@@ -232,7 +232,7 @@
         "\n",
         "        # Add assistant response to conversation history\n",
         "        conversation.append(ChatMessage(role=\"assistant\", content=response_buffer.getvalue()))\n",
-        "        print(\"\\n\" + \"=\" *50)\n",
+        "        print(\"\\n\" + \"=\" * 50)\n",
         "\n",
         "\n",
         "llm_npu_example()\n"
@@ -270,8 +270,7 @@
         "    model_name = \"NexaAI/OmniNeural-4B\"\n",
         "    # Alternatively, use local path\n",
         "    # model_name = os.path.expanduser(r\"~\\.cache\\nexa.ai\\nexa_sdk\\models\\NexaAI\\OmniNeural-4B\\weights-1-8.nexa\")\n",
-        "    \n",
-        "    \n",
+        "\n",
         "    plugin_id = \"npu\"\n",
         "    device = \"npu\"\n",
         "    max_tokens = 100\n",
@@ -282,11 +281,10 @@
         "    print(f\"Using plugin: {plugin_id}\")\n",
         "    print(f\"Device: {device}\")\n",
         "\n",
-        "     # Check for image existence\n",
+        "    # Check for image existence\n",
         "    if not (image_path and os.path.exists(image_path)):\n",
-        "        print(f\"\\033[93mWARNING: The specified image_path ('{image_path}') does not exist or was not provided. Multimodal prompts will not include image input.\\033[0m\")\n",
-        "\n",
-        "\n",
+        "        print(\n",
+        "            f\"\\033[93mWARNING: The specified image_path ('{image_path}') does not exist or was not provided. Multimodal prompts will not include image input.\\033[0m\")\n",
         "\n",
         "    # Create model instance\n",
         "    m_cfg = ModelConfig()\n",
@@ -345,7 +343,7 @@
         "        # Add assistant response to conversation history\n",
         "        conversation.append(MultiModalMessage(role=\"assistant\",\n",
         "                                              content=[MultiModalMessageContent(type=\"text\", text=response_buffer.getvalue())]))\n",
-        "        print(\"\\n\" + \"=\" *50)\n",
+        "        print(\"\\n\" + \"=\" * 50)\n",
         "\n",
         "\n",
         "vlm_npu_example()\n"
@@ -509,12 +507,13 @@
         "    print(f\"Using plugin: {plugin_id}\")\n",
         "    print(f\"Device: {device}\")\n",
         "\n",
-        "    assert os.path.exists(audio_file), f\"ERROR: The specified audio_file ('{audio_file}') does not exist. Please provide a valid audio file path to test ASR functionality.\"\n",
+        "    assert os.path.exists(\n",
+        "        audio_file), f\"ERROR: The specified audio_file ('{audio_file}') does not exist. Please provide a valid audio file path to test ASR functionality.\"\n",
         "\n",
         "    # Create ASR instance\n",
         "    asr = ASR.from_(name_or_path=model_name, plugin_id=plugin_id, device_id=device)\n",
         "    print('ASR model loaded successfully!')\n",
-        "    \n",
+        "\n",
         "    print(f\"\\nNote: Please update the audio_file path to point to your audio file\")\n",
         "    print(f\"Current audio_file: {audio_file}\")\n",
         "\n",
@@ -596,7 +595,6 @@
         "    # Alternatively, use local path\n",
         "    # model_name = os.path.expanduser(r\"~\\.cache\\nexa.ai\\nexa_sdk\\models\\NexaAI\\jina-v2-rerank-npu\\weights-1-4.nexa\")\n",
         "\n",
-        "\n",
         "    plugin_id = \"npu\"\n",
         "    batch_size = 4\n",
         "\n",
@@ -669,9 +667,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# ## 6. Computer Vision (CV) NPU Inference\n",
-        "#\n",
-        "# Run NPU-accelerated computer vision tasks (e.g., OCR/text recognition) on images. \n"
+        "## 6. Computer Vision (CV) NPU Inference\n",
+        "\n",
+        "Run NPU-accelerated computer vision tasks (e.g., OCR/text recognition) on images.\n"
       ]
     },
     {
@@ -682,6 +680,7 @@
       "source": [
         "import os\n",
         "from nexaai.cv import CVCapabilities, CVModel, CVModelConfig, CVResults\n",
+        "\n",
         "\n",
         "def cv_ocr_example():\n",
         "\n",
@@ -696,13 +695,12 @@
         "    cv = CVModel.from_(name_or_path=model_name, config=config, plugin_id='npu')\n",
         "\n",
         "    assert os.path.exists(image_path), f\"ERROR: Image file not found: {image_path}\"\n",
-        "        \n",
+        "\n",
         "    results = cv.infer(image_path)\n",
         "\n",
         "    print(f\"Number of results: {results.result_count}\")\n",
         "    for result in results.results:\n",
         "        print(f\"[{result.confidence:.2f}] {result.text}\")\n",
-        "\n",
         "\n",
         "\n",
         "cv_ocr_example()\n"
