chore: add commands to restore PATH

--- a/bindings/python/notebook/npu.ipynb
+++ b/bindings/python/notebook/npu.ipynb
@@ -26,8 +26,18 @@
         "\n",
         "> ⚠️ Do **not** use Conda or x86 builds — they are incompatible with native ARM64 binaries. If you are in a conda environment, run `conda deactivate` first.\n",
         "\n",
+
+        "\n",
         "Verify the installation:\n",
         "\n",
+        "In case your environment path gets overriden by some environment manager, we recommend you to run the following commands to restore PATH variable from system settings.\n",
+        "```powershell\n",
+        "$systemPath = [Environment]::GetEnvironmentVariable('Path', 'Machine')\n",
+        "$userPath   = [Environment]::GetEnvironmentVariable('Path', 'User')\n",
+        "$env:Path   = \"$userPath;$systemPath\"\n",
+        "```\n",
+        "\n",
+        "Then verify your python executable has the correct architecture and version (3.11 - 3.13)\n",
         "```sh\n",
         "python -c \"import sys, platform; print(f'Python version: {sys.version}')\"\n",
         "```\n",
