chore: add instruction to restart the terminal after installation

--- a/bindings/python/notebook/npu.ipynb
+++ b/bindings/python/notebook/npu.ipynb
@@ -24,9 +24,9 @@
         "\n",
         "> ❗ **IMPORTANT**: Make sure you select \"Add python.exe to PATH\" on the first screen of the installation wizard.\n",
         "\n",
-        "> ⚠️ Do **not** use Conda or x86 builds — they are incompatible with native ARM64 binaries. If you are in a conda environment, run `conda deactivate` first.\n",
+        "> 🛑 Make sure you restart the terminal or your IDE after installation.\n",
         "\n",
-
+        "> ⚠️ Do **not** use Conda or x86 builds — they are incompatible with native ARM64 binaries. If you are in a conda environment, run `conda deactivate` first.\n",
         "\n",
         "Verify the installation:\n",
         "\n",
