refactor: remove local path examples and update model instantiation in macOS notebook

--- a/bindings/python/notebook/macos.ipynb
+++ b/bindings/python/notebook/macos.ipynb
@@ -169,8 +169,6 @@
         "\n",
         "    # Use huggingface Repo ID\n",
         "    model_name = \"NexaAI/Qwen3-1.7B-4bit-MLX\"\n",
-        "    # Alternatively, use local path\n",
-        "    # model_name = os.path.expanduser(r\"~/.cache/nexa.ai/nexa_sdk/models/NexaAI/Qwen3-1.7B-4bit-MLX/weights.nexa\")\n",
         "\n",
         "    max_tokens = 100\n",
         "    system_message = \"You are a helpful assistant.\"\n",
@@ -252,8 +250,6 @@
         "\n",
         "    # Use huggingface repo ID\n",
         "    model_name = \"NexaAI/gemma-3n-E2B-it-4bit-MLX\"\n",
-        "    # Alternatively, use local path\n",
-        "    # model_name = os.path.expanduser(r\"~/.cache/nexa.ai/nexa_sdk/models/NexaAI/gemma-3n-E2B-it-4bit-MLX/weights-1-8.nexa\")\n",
         "\n",
         "    plugin_id = \"metal\"\n",
         "    \n",
@@ -271,7 +267,7 @@
         "\n",
         "    # Create model instance\n",
         "    m_cfg = ModelConfig()\n",
-        "    vlm = VLM.from_(name_or_path=model_name, m_cfg=m_cfg, plugin_id=plugin_id, device_id=device)\n",
+        "    vlm = VLM.from_(name_or_path=model_name, m_cfg=m_cfg, plugin_id=plugin_id)\n",
         "\n",
         "    # Create conversation history\n",
         "    conversation = [MultiModalMessage(role=\"system\",\n",
@@ -476,23 +472,19 @@
         "\n",
         "    # Use huggingface Repo ID\n",
         "    model_name = \"NexaAI/parakeet-tdt-0.6b-v2-MLX\"\n",
-        "    # Alternatively, use local path\n",
-        "    # model_name = os.path.expanduser(r\"~/.cache/nexa.ai/nexa_sdk/models/NexaAI/parakeet-tdt-0.6b-v2-MLX/weights-1-5.nexa\")\n",
         "\n",
         "    plugin_id = \"metal\"\n",
-        "    device = \"npu\"\n",
         "    # Example audio file (replace with your actual audio file)\n",
         "    audio_file = r\"path/to/audio\"  # Replace with actual audio file path\n",
         "\n",
         "    print(f\"Loading model: {model_name}\")\n",
         "    print(f\"Using plugin: {plugin_id}\")\n",
-        "    print(f\"Device: {device}\")\n",
         "\n",
         "    assert os.path.exists(\n",
         "        audio_file), f\"ERROR: The specified audio_file ('{audio_file}') does not exist. Please provide a valid audio file path to test ASR functionality.\"\n",
         "\n",
         "    # Create ASR instance\n",
-        "    asr = ASR.from_(name_or_path=model_name, plugin_id=plugin_id, device_id=device)\n",
+        "    asr = ASR.from_(name_or_path=model_name, plugin_id=plugin_id)\n",
         "    print('ASR model loaded successfully!')\n",
         "\n",
         "    print(f\"\\nNote: Please update the audio_file path to point to your audio file\")\n",
@@ -573,8 +565,6 @@
         "\n",
         "    # Use huggingface repo ID\n",
         "    model_name = \"NexaAI/jina-v2-rerank-mlx\"\n",
-        "    # Alternatively, use local path\n",
-        "    # model_name = os.path.expanduser(r\"~/.cache/nexa.ai/nexa_sdk/models/NexaAI/jina-v2-rerank-mlx/weights-1-4.nexa\")\n",
         "\n",
         "    plugin_id = \"metal\"\n",
         "    batch_size = 4\n",
