--- a/bindings/python/notebook/npu.ipynb
+++ b/bindings/python/notebook/npu.ipynb
@@ -17,18 +17,133 @@
         "\n",
         "## Prerequisites\n",
         "\n",
-        "- Python 3.11–3.13 (arm64 architecture required)\n",
-        "- Windows ARM64 (Snapdragon X Elite) or NPU-capable device\n",
-        "- NexaAI SDK installed: `pip install nexaai`\n",
-        "- NEXA_TOKEN environment variable set (see next section)\n",
+        "### 1. Install the correct Python version\n",
         "\n",
+        "NexaAI requires **Python 3.11 – 3.13 (ARM64 build)** on Windows ARM.\n",
+        "Please **download and install the official ARM64 Python** from the [python-3.11.1-arm64.exe](https://www.python.org/ftp/python/3.11.1/python-3.11.1-arm64.exe). Make sure you read the instructions below carefully before proceeding.\n",
+        "\n",
+        "> ❗ **IMPORTANT**: Make sure you select \"Add python.exe to PATH\" on the first screen of the installation wizard.\n",
+        "\n",
+        "> 🛑 Make sure you restart the terminal or your IDE after installation.\n",
+        "\n",
+        "> ⚠️ Do **not** use Conda or x86 builds — they are incompatible with native ARM64 binaries. If you are in a conda environment, run `conda deactivate` first.\n",
+        "\n",
+        "Verify the installation:\n",
+        "\n",
+        "In case your environment path gets overriden by some environment manager, we recommend you to run the following commands to restore PATH variable from system settings.\n",
+        "```powershell\n",
+        "$systemPath = [Environment]::GetEnvironmentVariable('Path', 'Machine')\n",
+        "$userPath   = [Environment]::GetEnvironmentVariable('Path', 'User')\n",
+        "$env:Path   = \"$userPath;$systemPath\"\n",
+        "```\n",
+        "\n",
+        "Then verify your python executable has the correct architecture and version (3.11 - 3.13)\n",
+        "```sh\n",
+        "python -c \"import sys, platform; print(f'Python version: {sys.version}')\"\n",
+        "```\n",
+        "\n",
+        "Your output should look like:\n",
+        "\n",
+        "> Python version: 3.11.0 (main, Oct 24 2022, 18:15:22) [MSC v.1933 64 bit (ARM64)]\n",
+        "\n",
+        "Expected output must contain version `3.11.0` and architecture `ARM64`.\n",
+        "\n",
+        "If it does show `AMD64` or incorrect version, try the following:\n",
+        "\n",
+        "- (If you have conda installed) Run `conda deactivate` to deactivate the current conda environment.\n",
+        "- (If your `python` executable points to the x86 version) You may need to make the ARM64 Python come before the x86 Python in your PATH.\n",
+        "  - Hit the `Win` key, and type `env`, and hit Enter to select `Edit the system environment variables` setting.\n",
+        "  - Click on `Environment Variables...` button.\n",
+        "  - Select `Path` and click `Edit...`.\n",
+        "  - Find your ARM64 Python installation path, and move it to the top of the list.\n",
+        "  - Hit `OK` for several times to close all the dialogs and save the changes.\n",
+        "- (If you forgot to select \"Add python.exe to PATH\" on the first screen of the installation wizard)\n",
+        "  - Run the installation wizard again, follow the instructions to remove the current installation, and then reinstall from the Wizard. Make sure to select \"Add python.exe to PATH\" this time.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "### 2. Create and activate a virtual environment\n",
+        "\n",
+        "`cd` to the current project root directory `cd path/to/nexa-sdk`.\n",
+        "\n",
+        "```sh\n",
+        "python -m venv nexaai-env\n",
+        "nexaai-env\\Scripts\\activate\n",
+        "```\n",
+        "\n",
+        "---\n",
+        "\n",
+        "### 3. Install the NexaAI SDK\n",
+        "\n",
+        "```bash\n",
+        "pip install nexaai\n",
+        "```\n",
+        "\n",
+        "---\n",
+        "\n",
+        "### 4. Select the venv as your Jupyter Notebook kernel\n",
+        "\n",
+        "- Depending the editor you are using, the way to change kernel might be different. For Cursor / VS Code, they are located at the top right corner of you code window.\n",
+        "- Look for and select the `nexaai-env`, or the custom virtual environment you have created. The kernel should automatically reload in most IDEs.\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Verification of Kernel\n",
+        "\n",
+        "Run the following code to ensure you have the right kernel running.\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import sys\n",
+        "import platform\n",
+        "\n",
+        "# ANSI color codes\n",
+        "RED = \"\\033[91m\"\n",
+        "GREEN = \"\\033[92m\"\n",
+        "YELLOW = \"\\033[93m\"\n",
+        "BOLD = \"\\033[1m\"\n",
+        "RESET = \"\\033[0m\"\n",
+        "\n",
+        "min_ver = (3, 11)\n",
+        "max_ver = (3, 13)\n",
+        "current_ver = sys.version_info\n",
+        "arch = platform.machine()\n",
+        "\n",
+        "if not (min_ver <= (current_ver.major, current_ver.minor) < max_ver) or arch.lower() != \"arm64\":\n",
+        "    print(\"\\n\" + \"=\" * 80)\n",
+        "    print(f\"{BOLD}{RED}WARNING: Your Python version or architecture is not compatible.{RESET}\")\n",
+        "    print(f\"Detected version: {current_ver.major}.{current_ver.minor}, architecture: {arch}\")\n",
+        "    print(f\"{YELLOW}Required: Python 3.11 - 3.13 & architecture 'arm64'.{RESET}\")\n",
+        "    print(\"=\" * 80)\n",
+        "    print(f\"{RED}DO NOT continue to the following code!{RESET}\\n\")\n",
+        "    print(\"To install arm64 Python:\")\n",
+        "    print(\"  - Download Python 3.11-3.13 for arm64 from https://www.python.org/downloads/\")\n",
+        "    print(\"  - Install and verify by running: python3 --version and python3 -c 'import platform; print(platform.machine())'\")\n",
+        "    print(\"  - Launch Jupyter and make sure to select the arm64 Python kernel in 'Kernel > Change kernel'.\")\n",
+        "    sys.exit(1)\n",
+        "else:\n",
+        "    print(f\"{GREEN}[VERIFICATION PASSED] Python version and architecture are correct. You may continue to the following sections.{RESET}\")\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "## Authentication Setup\n",
         "\n",
         "Before running any examples, you need to set up your NexaAI authentication token.\n",
         "\n",
         "### Set Token in Code\n",
         "\n",
-        "Replace `\"YOUR_NEXA_TOKEN_HERE\"` with your actual NexaAI token from [https://sdk.nexa.ai/](https://sdk.nexa.ai/):"
+        "Replace `\"YOUR_NEXA_TOKEN_HERE\"` with your actual NexaAI token from [https://sdk.nexa.ai/](https://sdk.nexa.ai/):\n"
       ]
     },
     {
@@ -40,7 +155,10 @@
         "import os\n",
         "\n",
         "# Replace \"YOUR_NEXA_TOKEN_HERE\" with your actual token from https://sdk.nexa.ai/\n",
-        "os.environ[\"NEXA_TOKEN\"] = \"YOUR_NEXA_TOKEN_HERE\"\n"
+        "os.environ[\"NEXA_TOKEN\"] = \"YOUR_NEXA_TOKEN_HERE\"\n",
+        "\n",
+        "assert os.environ.get(\"NEXA_TOKEN\", \"\").startswith(\n",
+        "    \"key/\"), \"ERROR: NEXA_TOKEN must start with 'key/'. Please check your token.\"\n"
       ]
     },
     {
@@ -59,6 +177,7 @@
       "outputs": [],
       "source": [
         "import io\n",
+        "import os\n",
         "\n",
         "from nexaai.common import GenerationConfig, ModelConfig, ChatMessage\n",
         "from nexaai.llm import LLM\n",
@@ -69,7 +188,12 @@
         "    print(\"=== LLM NPU Inference Example ===\")\n",
         "\n",
         "    # Model configuration\n",
+        "\n",
+        "    # Use huggingface Repo ID\n",
         "    model_name = \"NexaAI/Llama3.2-3B-NPU-Turbo\"\n",
+        "    # Alternatively, use local path\n",
+        "    # model_name = os.path.expanduser(r\"~\\.cache\\nexa.ai\\nexa_sdk\\models\\NexaAI\\Llama3.2-3B-NPU-Turbo\\weights-1-3.nexa\")\n",
+        "\n",
         "    plugin_id = \"npu\"\n",
         "    device = \"npu\"\n",
         "    max_tokens = 100\n",
@@ -118,7 +242,7 @@
         "\n",
         "        # Add assistant response to conversation history\n",
         "        conversation.append(ChatMessage(role=\"assistant\", content=response_buffer.getvalue()))\n",
-        "        print(\"\\n\" + \"=\" *50)\n",
+        "        print(\"\\n\" + \"=\" * 50)\n",
         "\n",
         "\n",
         "llm_npu_example()\n"
@@ -137,52 +261,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "c:\\Users\\mengshengwu\\workspace\\nexa-sdk\\.venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-            "  from .autonotebook import tqdm as notebook_tqdm\n"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "=== VLM NPU Inference Example ===\n",
-            "Loading model: NexaAI/OmniNeural-4B\n",
-            "Using plugin: npu\n",
-            "Device: npu\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "c:\\Users\\mengshengwu\\workspace\\nexa-sdk\\.venv\\Lib\\site-packages\\huggingface_hub\\file_download.py:982: UserWarning: `local_dir_use_symlinks` parameter is deprecated and will be ignored. The process to download files to a local folder has been updated and do not rely on symlinks anymore. You only need to pass a destination folder as`local_dir`.\n",
-            "For more details, check out https://huggingface.co/docs/huggingface_hub/main/en/guides/download#download-files-to-local-folder.\n",
-            "  warnings.warn(\n",
-            "Fetching 26 files: 100%|██████████| 26/26 [00:00<00:00, 2104.07it/s]\n"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "[OK] Successfully created nexa.manifest for NexaAI/OmniNeural-4B\n",
-            "\n",
-            "--- Multimodal Conversation 1 ---\n",
-            "User: What do you see in this image?\n",
-            "Including image: c:/Users/mengshengwu/workspace/nexa-sdk/temp/screenshot-20250701-132611.png\n",
-            "Assistant: This image shows a screenshot of a file manager or file explorer interface. The interface displays a list of files and folders, with the selected file being \"libaaml-base.dylib\". The file size is 613 KB, and the modification time is yesterday at 08:08. The interface also includes a search bar at the top and a navigation bar at the bottom. The interface is in Chinese.\n",
-            "\n",
-            "Profiling data: ProfilingData(ttft=2410000, prompt_time=2408000, decode_time=3787000, prompt_tokens=19, generated_tokens=86, audio_duration=0, prefill_speed=7.8903654485049834, decoding_speed=22.709268550303673, real_time_factor=0.0, stop_reason='eos')\n",
-            "\n",
-            "==================================================\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "import os\n",
         "import io\n",
@@ -196,15 +275,26 @@
         "    print(\"=== VLM NPU Inference Example ===\")\n",
         "\n",
         "    # Model configuration\n",
+        "\n",
+        "    # Use huggingface repo ID\n",
         "    model_name = \"NexaAI/OmniNeural-4B\"\n",
+        "    # Alternatively, use local path\n",
+        "    # model_name = os.path.expanduser(r\"~\\.cache\\nexa.ai\\nexa_sdk\\models\\NexaAI\\OmniNeural-4B\\weights-1-8.nexa\")\n",
+        "\n",
         "    plugin_id = \"npu\"\n",
         "    device = \"npu\"\n",
         "    max_tokens = 100\n",
         "    system_message = \"You are a helpful assistant that can understand images and text.\"\n",
+        "    image_path = '/your/image/path'  # Replace with actual image path if available\n",
         "\n",
         "    print(f\"Loading model: {model_name}\")\n",
         "    print(f\"Using plugin: {plugin_id}\")\n",
         "    print(f\"Device: {device}\")\n",
+        "\n",
+        "    # Check for image existence\n",
+        "    if not (image_path and os.path.exists(image_path)):\n",
+        "        print(\n",
+        "            f\"\\033[93mWARNING: The specified image_path ('{image_path}') does not exist or was not provided. Multimodal prompts will not include image input.\\033[0m\")\n",
         "\n",
         "    # Create model instance\n",
         "    m_cfg = ModelConfig()\n",
@@ -218,7 +308,7 @@
         "    test_cases = [\n",
         "        {\n",
         "            \"text\": \"What do you see in this image?\",\n",
-        "            \"image_path\": '/your/image/path'  # Replace with actual image path if available\n",
+        "            \"image_path\": image_path\n",
         "        }\n",
         "    ]\n",
         "\n",
@@ -263,7 +353,7 @@
         "        # Add assistant response to conversation history\n",
         "        conversation.append(MultiModalMessage(role=\"assistant\",\n",
         "                                              content=[MultiModalMessageContent(type=\"text\", text=response_buffer.getvalue())]))\n",
-        "        print(\"\\n\" + \"=\" *50)\n",
+        "        print(\"\\n\" + \"=\" * 50)\n",
         "\n",
         "\n",
         "vlm_npu_example()\n"
@@ -295,7 +385,12 @@
         "    print(\"=== Embedder NPU Inference Example ===\")\n",
         "\n",
         "    # Model configuration\n",
+        "\n",
+        "    # Use huggingface repo ID\n",
         "    model_name = \"NexaAI/embeddinggemma-300m-npu\"\n",
+        "    # Alternatively, use local path\n",
+        "    # model_name = os.path.expanduser(r\"~\\.cache\\nexa.ai\\nexa_sdk\\models\\NexaAI\\embeddinggemma-300m-npu\\weights-1-2.nexa\")\n",
+        "\n",
         "    plugin_id = \"npu\"\n",
         "    batch_size = 2\n",
         "\n",
@@ -407,20 +502,27 @@
         "    print(\"=== ASR NPU Inference Example ===\")\n",
         "\n",
         "    # Model configuration\n",
+        "\n",
+        "    # Use huggingface Repo ID\n",
         "    model_name = \"NexaAI/parakeet-npu\"\n",
+        "    # Alternatively, use local path\n",
+        "    # model_name = os.path.expanduser(r\"~\\.cache\\nexa.ai\\nexa_sdk\\models\\NexaAI\\parakeet-npu\\weights-1-5.nexa\")\n",
+        "\n",
         "    plugin_id = \"npu\"\n",
         "    device = \"npu\"\n",
+        "    # Example audio file (replace with your actual audio file)\n",
+        "    audio_file = r\"path/to/audio\"  # Replace with actual audio file path\n",
         "\n",
         "    print(f\"Loading model: {model_name}\")\n",
         "    print(f\"Using plugin: {plugin_id}\")\n",
         "    print(f\"Device: {device}\")\n",
         "\n",
+        "    assert os.path.exists(\n",
+        "        audio_file), f\"ERROR: The specified audio_file ('{audio_file}') does not exist. Please provide a valid audio file path to test ASR functionality.\"\n",
+        "\n",
         "    # Create ASR instance\n",
         "    asr = ASR.from_(name_or_path=model_name, plugin_id=plugin_id, device_id=device)\n",
         "    print('ASR model loaded successfully!')\n",
-        "\n",
-        "    # Example audio file (replace with your actual audio file)\n",
-        "    audio_file = \"Users/mengshengwu/workspace/nexa-sdk/temp/jfk.wav\"  # Replace with actual audio file path\n",
         "\n",
         "    print(f\"\\nNote: Please update the audio_file path to point to your audio file\")\n",
         "    print(f\"Current audio_file: {audio_file}\")\n",
@@ -497,7 +599,12 @@
         "    print(\"=== Reranker NPU Inference Example ===\")\n",
         "\n",
         "    # Model configuration\n",
+        "\n",
+        "    # Use huggingface repo ID\n",
         "    model_name = \"NexaAI/jina-v2-rerank-npu\"\n",
+        "    # Alternatively, use local path\n",
+        "    # model_name = os.path.expanduser(r\"~\\.cache\\nexa.ai\\nexa_sdk\\models\\NexaAI\\jina-v2-rerank-npu\\weights-1-4.nexa\")\n",
+        "\n",
         "    plugin_id = \"npu\"\n",
         "    batch_size = 4\n",
         "\n",
@@ -570,9 +677,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# ## 6. Computer Vision (CV) NPU Inference\n",
-        "#\n",
-        "# Run NPU-accelerated computer vision tasks (e.g., OCR/text recognition) on images. \n"
+        "## 6. Computer Vision (CV) NPU Inference\n",
+        "\n",
+        "Run NPU-accelerated computer vision tasks (e.g., OCR/text recognition) on images.\n"
       ]
     },
     {
@@ -584,20 +691,26 @@
         "import os\n",
         "from nexaai.cv import CVCapabilities, CVModel, CVModelConfig, CVResults\n",
         "\n",
-        "def cv_ocr_example():\n",
-        "    config = CVModelConfig(capabilities=CVCapabilities.OCR)\n",
-        "    cv = CVModel.from_(name_or_path=\"NexaAI/paddleocr-npu\", config=config, plugin_id='npu')\n",
-        "    image = '/path/to/image'\n",
         "\n",
-        "    if not os.path.exists(image):\n",
-        "        raise FileNotFoundError(f\"Image file not found: {image}\")\n",
-        "        \n",
-        "    results = cv.infer(image)\n",
+        "def cv_ocr_example():\n",
+        "\n",
+        "    # Use huggingface repo ID\n",
+        "    model_name = \"NexaAI/paddleocr-npu\"\n",
+        "    # Alternatively, use local path\n",
+        "    # model_name = os.path.expanduser(r\"~\\.cache\\nexa.ai\\nexa_sdk\\models\\NexaAI\\paddleocr-npu\\weights-1-1.nexa\")\n",
+        "\n",
+        "    image_path = r\"path/to/image\"\n",
+        "\n",
+        "    config = CVModelConfig(capabilities=CVCapabilities.OCR)\n",
+        "    cv = CVModel.from_(name_or_path=model_name, config=config, plugin_id='npu')\n",
+        "\n",
+        "    assert os.path.exists(image_path), f\"ERROR: Image file not found: {image_path}\"\n",
+        "\n",
+        "    results = cv.infer(image_path)\n",
         "\n",
         "    print(f\"Number of results: {results.result_count}\")\n",
         "    for result in results.results:\n",
         "        print(f\"[{result.confidence:.2f}] {result.text}\")\n",
-        "\n",
         "\n",
         "\n",
         "cv_ocr_example()\n"
@@ -606,7 +719,7 @@
   ],
   "metadata": {
     "kernelspec": {
-      "display_name": ".venv",
+      "display_name": "Python 3",
       "language": "python",
       "name": "python3"
     },
@@ -620,7 +733,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.13.0"
+      "version": "3.11.9"
     }
   },
   "nbformat": 4,
