feat(notebook): add tutorial video link and update Python version in ARM64 notebook

--- a/bindings/python/notebook/winodws(arm64).ipynb
+++ b/bindings/python/notebook/winodws(arm64).ipynb
@@ -6,6 +6,10 @@
       "source": [
         "# NexaAI NPU Inference Examples\n",
         "\n",
+        "> 🎥 **[Watch Tutorial Video](https://github.com/NexaAI/nexa-sdk/releases/download/v0.2.53/nexa-sdk-python-tutorial.mp4)** - Complete step-by-step guide for Windows ARM64 (Snapdragon X Elite) setup and usage\n",
+        "> \n",
+        "> 💡 **Tip**: Right-click the link and select \"Open in new tab\" to play the video directly in your browser\n",
+        "\n",
         "This notebook demonstrates how to use the NexaAI SDK for various AI inference tasks on NPU devices, including:\n",
         "\n",
         "- **LLM (Large Language Model)**: Text generation and conversation\n",
@@ -719,7 +723,7 @@
   ],
   "metadata": {
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": ".venv",
       "language": "python",
       "name": "python3"
     },
@@ -733,7 +737,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.9"
+      "version": "3.10.11"
     }
   },
   "nbformat": 4,
