--- a/bindings/python/notebook/winodws(arm64).ipynb
+++ b/bindings/python/notebook/winodws(arm64).ipynb
@@ -19,6 +19,8 @@
         "\n",
         "### 1. Install the correct Python version\n",
         "\n",
+        "If you prefer, we also offer a video tutorial for the installation. Check it out [here](https://www.youtube.com/watch?v=ziXKPRX0Ufo).\n",
+        "\n",
         "NexaAI requires **Python 3.11 – 3.13 (ARM64 build)** on Windows ARM.\n",
         "Please **download and install the official ARM64 Python** from the [python-3.11.1-arm64.exe](https://www.python.org/ftp/python/3.11.1/python-3.11.1-arm64.exe). Make sure you read the instructions below carefully before proceeding.\n",
         "\n",
