chore: suppress hf warnings

--- a/bindings/python/notebook/winodws(arm64).ipynb
+++ b/bindings/python/notebook/winodws(arm64).ipynb
@@ -158,6 +158,8 @@
         "\n",
         "# Replace \"YOUR_NEXA_TOKEN_HERE\" with your actual token from https://sdk.nexa.ai/\n",
         "os.environ[\"NEXA_TOKEN\"] = \"YOUR_NEXA_TOKEN_HERE\"\n",
+        "# Suppress HF warnings\n",
+        "os.environ[\"HF_HUB_VERBOSITY\"] = \"error\"\n",
         "\n",
         "assert os.environ.get(\"NEXA_TOKEN\", \"\").startswith(\n",
         "    \"key/\"), \"ERROR: NEXA_TOKEN must start with 'key/'. Please check your token.\"\n"
