fix: mlx plugin id in macos notebook example

--- a/bindings/python/notebook/macos.ipynb
+++ b/bindings/python/notebook/macos.ipynb
@@ -149,7 +149,7 @@
         "\n",
         "    # Create model instance\n",
         "    m_cfg = ModelConfig()\n",
-        "    llm = LLM.from_(name_or_path=model_name, m_cfg=m_cfg)\n",
+        "    llm = LLM.from_(name_or_path=model_name, m_cfg=m_cfg, plugin_id=\"mlx\")\n",
         "\n",
         "    # Create conversation history\n",
         "    conversation = [ChatMessage(role=\"system\", content=system_message)]\n",
@@ -223,7 +223,7 @@
         "    # Use huggingface repo ID\n",
         "    model_name = \"NexaAI/gemma-3n-E2B-it-4bit-MLX\"\n",
         "\n",
-        "    plugin_id = \"metal\"\n",
+        "    plugin_id = \"mlx\"\n",
         "    \n",
         "    max_tokens = 100\n",
         "    system_message = \"You are a helpful assistant that can understand images and text.\"\n",
@@ -330,7 +330,7 @@
         "    # Use huggingface repo ID for MLX Community embedding model\n",
         "    model_name = \"mlx-community/embeddinggemma-300m-bf16\"\n",
         "\n",
-        "    plugin_id = \"metal\"\n",
+        "    plugin_id = \"mlx\"\n",
         "    batch_size = 2\n",
         "\n",
         "    print(f\"Loading model: {model_name}\")\n",
@@ -445,7 +445,7 @@
         "    # Use huggingface Repo ID\n",
         "    model_name = \"NexaAI/parakeet-tdt-0.6b-v2-MLX\"\n",
         "\n",
-        "    plugin_id = \"metal\"\n",
+        "    plugin_id = \"mlx\"\n",
         "    # Example audio file (replace with your actual audio file)\n",
         "    audio_file = r\"path/to/audio\"  # Replace with actual audio file path\n",
         "\n",
@@ -538,7 +538,7 @@
         "    # Use huggingface repo ID\n",
         "    model_name = \"NexaAI/jina-v2-rerank-mlx\"\n",
         "\n",
-        "    plugin_id = \"metal\"\n",
+        "    plugin_id = \"mlx\"\n",
         "    batch_size = 4\n",
         "\n",
         "    print(f\"Loading model: {model_name}\")\n",
@@ -633,7 +633,7 @@
         "    image_path = r\"path/to/image\"\n",
         "\n",
         "    config = CVModelConfig(capabilities=CVCapabilities.OCR)\n",
-        "    cv = CVModel.from_(name_or_path=model_name, config=config, plugin_id='metal')\n",
+        "    cv = CVModel.from_(name_or_path=model_name, config=config, plugin_id='mlx')\n",
         "\n",
         "    assert os.path.exists(image_path), f\"ERROR: Image file not found: {image_path}\"\n",
         "\n",
@@ -650,7 +650,7 @@
   ],
   "metadata": {
     "kernelspec": {
-      "display_name": ".venv",
+      "display_name": "nexaai",
       "language": "python",
       "name": "python3"
     },
@@ -664,7 +664,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.18"
+      "version": "3.10.19"
     }
   },
   "nbformat": 4,
