fix: add mmproj path to the VLM example in windows x64 notebook

--- a/bindings/python/notebook/windows(x64).ipynb
+++ b/bindings/python/notebook/windows(x64).ipynb
@@ -213,6 +213,7 @@
         "    # Model configuration\n",
         "\n",
         "    model_name = \"ggml-org/gemma-3-4b-it-GGUF/gemma-3-4b-it-Q4_K_M.gguf\"\n",
+        "    mmproj_path = \"ggml-org/gemma-3-4b-it-GGUF/mmproj-model-f16.gguf\"\n",
         "\n",
         "    plugin_id = \"cpu_gpu\"\n",
         "    max_tokens = 100\n",
@@ -229,7 +230,7 @@
         "\n",
         "    # Create model instance\n",
         "    m_cfg = ModelConfig()\n",
-        "    vlm = VLM.from_(name_or_path=model_name, m_cfg=m_cfg, plugin_id=plugin_id)\n",
+        "    vlm = VLM.from_(name_or_path=model_name, mmproj_path=mmproj_path, m_cfg=m_cfg, plugin_id=plugin_id)\n",
         "\n",
         "    # Create conversation history\n",
         "    conversation = [MultiModalMessage(role=\"system\",\n",
